// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A value node does initialize as expected 1`] = `
Object {
  "auto": Object {},
  "current": Object {
    "bar": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": Array [
        null,
      ],
    },
    "baz": Object {
      "defaultValue": "Hello World!",
      "userValue": undefined,
      "value": "Hello World!",
    },
    "foo": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": null,
    },
  },
  "next": Object {},
  "working": Object {},
}
`;

exports[`A value node reacts to changes as expected 1`] = `
Object {
  "auto": Object {},
  "current": Object {
    "bar": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": Array [
        null,
      ],
    },
    "baz": Object {
      "defaultValue": "Hello World!",
      "userValue": undefined,
      "value": "Hello World!",
    },
    "foo": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": null,
    },
  },
  "next": Object {
    "baz": Object {
      "defaultValue": "Hello World!",
      "userValue": "BazBazBaz",
      "value": "BazBazBaz",
    },
  },
  "working": Object {},
}
`;

exports[`A value node reacts to changes as expected 2`] = `
Object {
  "auto": Object {
    "bar": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": Array [
        "Magnificent",
      ],
    },
  },
  "current": Object {
    "bar": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": Array [
        null,
      ],
    },
    "baz": Object {
      "defaultValue": "Hello World!",
      "userValue": undefined,
      "value": "Hello World!",
    },
    "foo": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": null,
    },
  },
  "next": Object {
    "baz": Object {
      "defaultValue": "Hello World!",
      "userValue": "BazBazBaz",
      "value": "BazBazBaz",
    },
    "foo": Object {
      "defaultValue": null,
      "userValue": "Magnificent",
      "value": "Magnificent",
    },
  },
  "working": Object {},
}
`;

exports[`A value node reacts to changes as expected 3`] = `
Object {
  "auto": Object {},
  "current": Object {
    "bar": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": Array [
        null,
      ],
    },
    "baz": Object {
      "defaultValue": "Hello World!",
      "userValue": undefined,
      "value": "Hello World!",
    },
    "foo": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": null,
    },
  },
  "next": Object {
    "bar": Object {
      "defaultValue": null,
      "userValue": "Yohoho",
      "value": Array [
        "Yohoho",
      ],
    },
    "baz": Object {
      "defaultValue": "Hello World!",
      "userValue": "BazBazBaz",
      "value": "BazBazBaz",
    },
    "foo": Object {
      "defaultValue": null,
      "userValue": "Magnificent",
      "value": "Magnificent",
    },
  },
  "working": Object {},
}
`;

exports[`A value node reacts to changes as expected 4`] = `
Object {
  "auto": Object {},
  "current": Object {
    "bar": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": Array [
        null,
      ],
    },
    "baz": Object {
      "defaultValue": "Hello World!",
      "userValue": undefined,
      "value": "Hello World!",
    },
    "foo": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": null,
    },
  },
  "next": Object {
    "bar": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": Array [
        "Magnificent",
      ],
    },
    "baz": Object {
      "defaultValue": "Hello World!",
      "userValue": "BazBazBaz",
      "value": "BazBazBaz",
    },
    "foo": Object {
      "defaultValue": null,
      "userValue": "Magnificent",
      "value": "Magnificent",
    },
  },
  "working": Object {},
}
`;

exports[`A value node reacts to changes as expected 5`] = `
Object {
  "auto": Object {
    "bar": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": Array [
        null,
      ],
    },
  },
  "current": Object {
    "bar": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": Array [
        null,
      ],
    },
    "baz": Object {
      "defaultValue": "Hello World!",
      "userValue": undefined,
      "value": "Hello World!",
    },
    "foo": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": null,
    },
  },
  "next": Object {
    "bar": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": Array [
        "Magnificent",
      ],
    },
    "baz": Object {
      "defaultValue": "Hello World!",
      "userValue": "BazBazBaz",
      "value": "BazBazBaz",
    },
    "foo": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": null,
    },
  },
  "working": Object {},
}
`;

exports[`A value node reacts to changes as expected 6`] = `
Object {
  "auto": Object {
    "bar": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": Array [
        "Cool",
      ],
    },
  },
  "current": Object {
    "bar": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": Array [
        null,
      ],
    },
    "baz": Object {
      "defaultValue": "Hello World!",
      "userValue": undefined,
      "value": "Hello World!",
    },
    "foo": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": null,
    },
  },
  "next": Object {
    "bar": Object {
      "defaultValue": null,
      "userValue": undefined,
      "value": Array [
        "Magnificent",
      ],
    },
    "baz": Object {
      "defaultValue": "Hello World!",
      "userValue": "BazBazBaz",
      "value": "BazBazBaz",
    },
    "foo": Object {
      "defaultValue": null,
      "userValue": "Cool",
      "value": "Cool",
    },
  },
  "working": Object {},
}
`;

exports[`A value node reacts to changes as expected 7`] = `
Object {
  "bar": Object {
    "defaultValue": null,
    "userValue": undefined,
    "value": Array [
      "Cool",
    ],
  },
  "baz": Object {
    "defaultValue": "Hello World!",
    "userValue": "BazBazBaz",
    "value": "BazBazBaz",
  },
  "foo": Object {
    "defaultValue": null,
    "userValue": "Cool",
    "value": "Cool",
  },
}
`;
